# noc_scraper

./: .env.example  .gitignore  README.md  pyproject.toml
src/noc_scraper/: noc_scraper.py  script.py  telegram_data.json
